[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "keras_stat_tuner"
version = "0.0.1"
authors = [
  { name="Jack Stevenson", email="jastevenson@lincoln.ac.uk" },
]
description = "A keras tuner that nudges hyperparameters based on the co-efficients of an sklearn estimator"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
