[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "keras_stat_tuner"
version = "0.0.1"
authors = [
  { name="Jack Stevenson", email="jack.stevenson9001@gmail.com" },
]
description = "A keras tuner that nudges hyperparameters based on the co-efficients of an sklearn estimator"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/A-Yakkus/keras_stat_tuner/"
"Bug Tracker" = "https://github.com/A-Yakkus/keras_stat_tuner/issues"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
filterwarnings =[
    "ignore::DeprecationWarning:keras_tuner.*:"
]
